--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,62 @@
 /build/
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Ant
+build/
+dist/
+bin/
+*.class
+*.war
+*.ear
+*.jar
+
+# Jakarta EE / Java
+*.log
+*.swp
+*.iml
+*.ipr
+*.iws
+*.class
+*.war
+*.ear
+*.jar
+
+## NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# Logs and temporary files
+logs/
+*.log
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# System Files
+.DS_Store
+Thumbs.db
