--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -41,4 +41,7 @@
         <servlet-name>LogOut</servlet-name>
         <url-pattern>/logOut</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
