--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.bcrypt-0.10.2.jar=E:\\dowload\\bcrypt-0.10.2.jar
+file.reference.guava-33.4.0-jre.jar=C:\\Users\\admin\\Downloads\\Compressed\\guava-33.4.0-jre.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\Wondersgare APP\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\Wondersgare APP\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=E:\\Wondersgare APP\\jaxb-api-2.1.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.bcrypt-0.10.2.jar}
+    ${file.reference.bcrypt-0.10.2.jar}:\
+    ${file.reference.guava-33.4.0-jre.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
