--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ nbproject/project.properties
 nbproject/private/private.properties
 src/java/dao/DBContext.java
 /nbproject
+src/java/dao/DBContext.java
